--- a/templates/demo.html
+++ b/templates/demo.html
@@ -232,6 +232,7 @@
                             <select id="hastad-bits" class="form-select">
                                 <option value="512">512</option>
                                 <option value="1024" selected>1024</option>
+                                <option value="2048">2048</option>
                             </select>
                         </div>
 
